<resources>
    <string name="app_name">Donation Tracker</string>
    <string name="you_are_logged_in">You are logged in</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register2">REGISTER</string>
    <string name="data">data</string>
    <string name="welcome">Welcome</string>
    <string name="view_all_locations">View All Locations</string>
    <string name="view_all_items">View All Items</string>
    <string name="map">Map</string>
    <string name="log_out">Log Out</string>
    <string name="username2">Username:</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="donation_tracker">Donation Tracker</string>
    <string name="log_in">LOG IN</string>
    <string name="add_item">Add Item</string>
    <string name="edit">Edit</string>
    <string name="delete_item">Delete Item</string>
    <string name="edit_location">Edit Location</string>
    <string name="view_inventory">View Inventory</string>
    <string name="location_longitude">Location Longitude</string>
    <string name="longitude">Longitude</string>
    <string name="location_latitude">Location Latitude</string>
    <string name="latitude">Latitude</string>
    <string name="location_address">Location Address</string>
    <string name="address">Address</string>
    <string name="location_phone_number">Location Phone Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="location_type">Location Type</string>
    <string name="add_location">Add Location</string>
    <string name="back">Back</string>
    <string name="enter_name_of_location">Enter Name of Location</string>
    <string name="enter_name_of_item">Enter Name of Item</string>
    <string name="location_name">Location Name</string>
    <string name="search">Search</string>
    <string name="time_stamp">Time Stamp</string>
    <string name="item_name">Item Name</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="item_time_stamp">Item Time Stamp</string>
    <string name="cancel">Cancel</string>
    <string name="location">Location</string>
    <string name="item_location">Item Location</string>
    <string name="short_description">Short Description</string>
    <string name="item_short_description">Item Short Description</string>
    <string name="full_description">Full Description</string>
    <string name="item_full_description">Item Full Description</string>
    <string name="value">Value</string>
    <string name="item_value">Item Value</string>
    <string name="category">Category</string>
    <string name="item_category">Item Category</string>
</resources>
