<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/item_edit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginStart="83dp"
        android:onClick="onCancelPressed"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="219dp"
        tools:layout_editor_absoluteY="503dp" />

    <Button
        android:id="@+id/item_edit_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/item_edit_cancel"
        android:layout_marginEnd="83dp"
        android:onClick="onSubmitPressed"
        android:text="@string/submit"
        tools:layout_editor_absoluteX="78dp"
        tools:layout_editor_absoluteY="503dp" />

    <ScrollView
        android:id="@+id/item_scroll_view"
        android:layout_width="341dp"
        android:layout_height="465dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="22dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/item_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/item_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_name_input"
                android:text="@string/name" />

            <EditText
                android:id="@+id/item_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_name" />

            <TextView
                android:id="@+id/time_stamp_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/time_stamp_input"
                android:text="@string/time_stamp" />

            <EditText
                android:id="@+id/time_stamp_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_time_stamp" />


            <TextView
                android:id="@+id/item_location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_location_input"
                android:text="@string/location" />

            <EditText
                android:id="@+id/item_location_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_location" />

            <TextView
                android:id="@+id/item_short_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_short_description_input"
                android:text="@string/short_description" />

            <EditText
                android:id="@+id/item_short_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_short_description" />

            <TextView
                android:id="@+id/item_full_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_full_description_input"
                android:text="@string/full_description" />

            <EditText
                android:id="@+id/item_full_description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_full_description" />

            <TextView
                android:id="@+id/item_value_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_value_input"
                android:text="@string/value" />

            <EditText
                android:id="@+id/item_value_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_value" />

            <TextView
                android:id="@+id/item_category_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/item_category_input"
                android:text="@string/category" />

            <EditText
                android:id="@+id/item_category_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/item_category" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>